--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
     <header>
         <h1>Header Logo</h1>
-        <nav>
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link one</a></li>
             </ul>
-        </nav>
     </header>
 
     <div class="top-container">
