--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>This website is awsome</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             
-            <button class="sign-up">Sign up</button>
+            <button>Sign up</button>
         </div>
 
             <div class="img-place-holder"><p>this is a placeholder for an image</p></div>        
@@ -52,10 +52,14 @@
         </div>
             
         <div class="sign-up-container">
-            <h4>Call to action! It's time!</h4>
-            <p>Sign up for our product by clicking that button right over there!</p>
 
-            <button class="sign-up footer-button">Sign up</button>
+            <div class="blue-background">
+                <div>
+                    <h4>Call to action! It's time!</h4>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
+            </div>   
         </div>
     </div>
 
